<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Cache Settings"
        android:key="pref_category_cache">

        <ListPreference
            android:key="@string/pref_disk_cache_size"
            android:title="@string/disk_cache_title"
            android:summary="@string/disk_cache_summary"
            android:entries="@array/disk_cache_size_labels"
            android:entryValues="@array/disk_cache_size_values"
            android:defaultValue="0" />

        <ListPreference
            android:key="@string/pref_ram_buffer_size"
            android:title="@string/ram_buffer_title"
            android:summary="@string/ram_buffer_summary"
            android:entries="@array/ram_buffer_size_labels"
            android:entryValues="@array/ram_buffer_size_values"
            android:defaultValue="0" />

        <ListPreference
            android:key="@string/pref_buffer_length"
            android:title="@string/buffer_length_title"
            android:summary="@string/buffer_length_summary"
            android:entries="@array/buffer_length_labels"
            android:entryValues="@array/buffer_length_values"
            android:defaultValue="0" />

        <ListPreference
            android:key="@string/pref_back_buffer"
            android:title="@string/back_buffer_title"
            android:summary="@string/back_buffer_summary"
            android:entries="@array/back_buffer_labels"
            android:entryValues="@array/back_buffer_values"
            android:defaultValue="0" />

        <Preference
            android:key="@string/pref_clear_cache"
            android:title="@string/clear_cache_title"
            android:summary="@string/clear_cache_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Remote Control"
        android:key="pref_category_remote">

        <SwitchPreferenceCompat
            android:key="@string/pref_remote_enabled"
            android:title="@string/remote_title"
            android:summary="@string/remote_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
